maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:70: error: not found: value ym
  if ((j+1<ym) && !aMurNord(i,j+1) && (getIndication(i,j+1)<min)) {
           ^JediEscaper:72: error: not found: value xm
  if ((i+1<xm) && !aMurOuest(i+1,j) && (getIndication(i+1,j)<min)) {
           ^